--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -279,7 +279,7 @@ common hlint
     cpp-options: -Dhlint
 
 common stan
-  if flag(stan) && impl(ghc < 9.0)
+  if flag(stan) && (impl(ghc >= 8.8) && impl(ghc < 9.0))
     build-depends: hls-stan-plugin ^>= 1.0
     cpp-options: -Dstan
 
