--- a/plugins/hls-stan-plugin/hls-stan-plugin.cabal
+++ b/plugins/hls-stan-plugin/hls-stan-plugin.cabal
@@ -14,7 +14,7 @@ category:      Development
 build-type:    Simple
 extra-source-files:
   LICENSE
-  test/testdata/**/*
+  test/testdata/*.hs
 
 flag pedantic
   description: Enable -Werror
@@ -23,6 +23,10 @@ flag pedantic
 
 
 library
+  if impl(ghc < 8.8) || impl(ghc >= 9.0)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:    Ide.Plugin.Stan
   hs-source-dirs:     src
   build-depends:
@@ -50,6 +54,10 @@ library
     OverloadedStrings
 
 test-suite test
+  if impl(ghc < 8.8) || impl(ghc >= 9.0)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
