--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -362,6 +362,7 @@ executable haskell-language-server
                     , rename
                     , retrie
                     , tactic
+                    , hlint
                     , stan
                     , moduleName
                     , pragmas
