--- a/cabal.project
+++ b/cabal.project
@@ -28,6 +28,7 @@ packages:
          ./plugins/hls-qualify-imported-names-plugin
          ./plugins/hls-selection-range-plugin
          ./plugins/hls-change-type-signature-plugin
+         ./plugins/hls-gadt-plugin
 
 -- Standard location for temporary packages needed for particular environments
 -- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
