--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -186,6 +186,11 @@ flag changeTypeSignature
   default:     True
   manual:      True
 
+flag gadt
+  description: Enable gadt plugin
+  default:     True
+  manual:      True
+
 -- formatters
 
 flag floskell
@@ -308,6 +313,11 @@ common changeTypeSignature
     build-depends: hls-change-type-signature-plugin ^>= 1.0
     cpp-options: -DchangeTypeSignature
 
+common gadt
+  if flag(gadt)
+    build-depends: hls-gadt-plugin ^>= 1.0
+    cpp-options: -Dgadt
+
 -- formatters
 
 common floskell
@@ -359,6 +369,7 @@ executable haskell-language-server
                     , alternateNumberFormat
                     , qualifyImportedNames
                     , selectionRange
+                    , gadt
                     , floskell
                     , fourmolu
                     , ormolu
