--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -191,6 +191,11 @@ flag gadt
   default:     True
   manual:      True
 
+flag explicitFixity
+  description: Enable explicitFixity plugin
+  default:     True
+  manual:      True
+
 -- formatters
 
 flag floskell
@@ -318,6 +323,11 @@ common gadt
     build-depends: hls-gadt-plugin ^>= 1.0
     cpp-options: -Dgadt
 
+common explicitFixity
+  if flag(explicitFixity)
+    build-depends: hls-explicit-fixity-plugin ^>= 1.0
+    cpp-options: -DexplicitFixity
+
 -- formatters
 
 common floskell
@@ -370,6 +380,7 @@ executable haskell-language-server
                     , qualifyImportedNames
                     , selectionRange
                     , gadt
+                    , explicitFixity
                     , floskell
                     , fourmolu
                     , ormolu
