--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -254,6 +254,11 @@ jobs:
         name: Test hls-explicit-record-fields-plugin test suite
         run: cabal test hls-explicit-record-fields-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-explicit-record-fields-plugin --test-options="$TEST_OPTS"
 
+      ## version needs to be limited since the tests depend on cabal-fmt which only builds using specific ghc versions
+      - if: matrix.test && matrix.ghc == '8.10.7'
+        name: Test hls-cabal-fmt-plugin test suite
+        run: cabal test hls-cabal-fmt-plugin --test-options="$TEST_OPTS" || cabal test hls-cabal-fmt-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-cabal-fmt-plugin --test-options="$TEST_OPTS"
+
   test_post_job:
     if: always()
     runs-on: ubuntu-latest
