--- a/plugins/hls-class-plugin/hls-class-plugin.cabal
+++ b/plugins/hls-class-plugin/hls-class-plugin.cabal
@@ -56,6 +56,7 @@ test-suite tests
   build-depends:
     , base
     , filepath
+    , ghcide
     , hls-class-plugin
     , hls-test-utils     ^>=1.3
     , lens
