--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -137,20 +137,87 @@
   # Things that are unsafe in Haskell base library
   - {name: unsafeInterleaveIO, within: [Development.IDE.LSP.LanguageServer]}
   - {name: unsafeDupablePerformIO, within: []}
-  - {name: unsafeCoerce, within: [Ide.Plugin.Eval.Code, Development.IDE.Core.Compile, Development.IDE.Types.Shake]}
+  - name: unsafeCoerce
+    within: 
+    - Ide.Plugin.Eval.Code
+    - Development.IDE.Core.Compile
+    - Development.IDE.Types.Shake
+    - Wingman.Judgements.SYB
+    - Ide.Plugin.Properties
+
   # Things that are a bit dangerous in the GHC API
-  - {name: nameModule, within: []}
-  # Partials and their legacy locations
-  - name: tail
+  - name: nameModule
     within:
+    - Ide.Plugin.CallHierarchy.Internal
+    - Ide.Plugin.Rename
+    - Compat.HieBin
+
+  # Partial functions
+  - name: Data.List.head
+    within:
+    - Main
+    - Experiments
+    - Development.IDE.Core.Shake
+    - Development.IDE.Plugin.CodeAction
+    - Development.IDE.Plugin.Completions
+    - Development.IDE.Plugin.CodeAction.ExactPrint
+    - Development.IDE.Session
+    - Development.IDE.Spans.Documentation
+    - Ide.Plugin.CallHierarchy.Internal
+    - TExpectedActual
+    - TRigidType
+    - TRigidType
+    - Ide.Plugin.Class
+    - Wingman.Tactics
+
+  - name: Data.List.tail
+    within:
+    - Main
     - Development.Benchmark.Rules
     - Development.IDE.Plugin.CodeAction
     - Development.IDE.Plugin.CodeAction.ExactPrint
     - Development.IDE.Session
-    # ghcide/test/exe
+    - IDE.Plugin.Eval.Code
+    - IDE.Plugin.Eval.Util
+    - UnificationSpec
+
+  - name: "Data.List.!!"
+    within:
     - Main
-    # plugins/hls-tactics-plugin/test
-    # - UnificationSpec
+    - Experiments
+    - FunctionalCodeAction
+    - Development.IDE.Plugin.CodeAction
+    - Development.IDE.Plugin.Completions.Logic
+    - Development.IDE.Spans.Documentation
+    - Wingman.CaseSplit
+    - Wingman.Simplify
+
+
+  - name: Data.Text.head
+    within:
+    - Development.IDE.Plugin.CodeAction
+    - Development.IDE.Plugin.Completions.Logic
+
+  - name: Data.Maybe.fromJust 
+    within: 
+    - Experiments
+    - Main
+    - MultipleImports
+    - Progress
+    - Utils
+    - Development.IDE.Core.Compile
+    - Development.IDE.Core.Rules
+    - Development.IDE.Core.Shake
+    - Development.IDE.Plugin.Completions
+    - Development.IDE.Plugin.CodeAction.ExactPrint
+    - Development.IDE.Test
+    - Development.IDE.Graph.Internal.Profile
+    - Development.IDE.Graph.Internal.Rules
+    - Ide.Plugin.Class
+
+  - name: "Data.Map.!"
+    within: 
+    - Wingman.LanguageServer
 
 # We really do not want novel usages of restricted functions, and mere
 # Warning is not enough to prevent those consistently; you need a build failure.
