Remove some partial functions from Shake.hs
Also removes a partial pattern match from Action.hs.

--- a/hls-graph/hls-graph.cabal
+++ b/hls-graph/hls-graph.cabal
@@ -134,4 +134,5 @@ test-suite tests
     , tasty-hunit
     , tasty-rerun
     , text
+    , unordered-containers
   build-tool-depends: hspec-discover:hspec-discover -any
