install pre-commit hook

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -29,13 +29,13 @@ tasks:
       done
 
       # Install pre-commit hook
-      pre-commit
+      pre-commit install
 
       # Configure VSCode to use the locally built version of HLS
       mkdir -p .vscode
       if [ ! -f .vscode/settings.json ]; then
         # Only write to .vscode/settings.json if it doesn't exist.
-        echo '{ "haskell.serverExecutablePath": "/home/gitpod/.cabal/bin/haskell-language-server" }' > .vscode/settings.json 
+        echo '{ "haskell.serverExecutablePath": "/home/gitpod/.cabal/bin/haskell-language-server" }' > .vscode/settings.json
       fi
     init: |
       cabal update
