--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -239,12 +239,12 @@ flag dynamic
   manual:      True
 
 common class
-  if flag(class)
+  if flag(class) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-class-plugin ^>= 1.0
     cpp-options: -Dhls_class
 
 common callHierarchy
-  if flag(callHierarchy)
+  if flag(callHierarchy) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-call-hierarchy-plugin ^>= 1.0
     cpp-options: -Dhls_callHierarchy
 
@@ -254,22 +254,22 @@ common haddockComments
     cpp-options: -Dhls_haddockComments
 
 common eval
-  if flag(eval)
+  if flag(eval) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-eval-plugin ^>= 1.2
     cpp-options: -Dhls_eval
 
 common importLens
-  if flag(importLens)
+  if flag(importLens) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-explicit-imports-plugin ^>= 1.1
     cpp-options: -Dhls_importLens
 
 common refineImports
-  if flag(refineImports)
+  if flag(refineImports) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-refine-imports-plugin ^>=1.0
     cpp-options: -Dhls_refineImports
 
 common rename
-  if flag(rename)
+  if flag(rename) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-rename-plugin ^>= 1.0
     cpp-options: -Dhls_rename
 
@@ -284,7 +284,7 @@ common tactic
     cpp-options: -Dhls_tactic
 
 common hlint
-  if flag(hlint)
+  if flag(hlint) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-hlint-plugin ^>= 1.0
     cpp-options: -Dhls_hlint
 
@@ -294,12 +294,12 @@ common stan
     cpp-options: -Dhls_stan
 
 common moduleName
-  if flag(moduleName)
+  if flag(moduleName) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-module-name-plugin ^>= 1.0
     cpp-options: -Dhls_moduleName
 
 common pragmas
-  if flag(pragmas)
+  if flag(pragmas) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-pragmas-plugin ^>= 1.0
     cpp-options: -Dhls_pragmas
 
@@ -309,54 +309,54 @@ common splice
     cpp-options: -Dhls_splice
 
 common alternateNumberFormat
-  if flag(alternateNumberFormat)
+  if flag(alternateNumberFormat) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-alternate-number-format-plugin ^>= 1.1
     cpp-options: -Dhls_alternateNumberFormat
 
 common qualifyImportedNames
-  if flag(qualifyImportedNames)
+  if flag(qualifyImportedNames) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-qualify-imported-names-plugin ^>=1.0
     cpp-options: -Dhls_qualifyImportedNames
 
 common codeRange
-  if flag(codeRange)
+  if flag(codeRange) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-code-range-plugin ^>= 1.0
     cpp-options: -Dhls_codeRange
 
 common changeTypeSignature
-  if flag(changeTypeSignature)
+  if flag(changeTypeSignature) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-change-type-signature-plugin ^>= 1.0
     cpp-options: -Dhls_changeTypeSignature
 
 common gadt
-  if flag(gadt)
+  if flag(gadt) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-gadt-plugin ^>= 1.0
     cpp-options: -Dhls_gadt
 
 common explicitFixity
-  if flag(explicitFixity)
+  if flag(explicitFixity) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-explicit-fixity-plugin ^>= 1.0
     cpp-options: -DexplicitFixity
 
 -- formatters
 
 common floskell
-  if flag(floskell)
+  if flag(floskell) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-floskell-plugin ^>= 1.0
     cpp-options: -Dhls_floskell
 
 common fourmolu
-  if flag(fourmolu)
+  if flag(fourmolu) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-fourmolu-plugin ^>= 1.0
     cpp-options: -Dhls_fourmolu
 
 common ormolu
-  if flag(ormolu)
+  if flag(ormolu) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-ormolu-plugin ^>= 1.0
     cpp-options: -Dhls_ormolu
 
 common stylishHaskell
-  if flag(stylishHaskell)
+  if flag(stylishHaskell) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-stylish-haskell-plugin ^>= 1.0
     cpp-options: -Dhls_stylishHaskell
 
@@ -366,7 +366,7 @@ common brittany
     cpp-options: -Dhls_brittany
 
 common refactor
-  if flag(refactor)
+  if flag(refactor) && (impl(ghc < 9.4.1) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-refactor-plugin ^>= 1.0
     cpp-options: -Dhls_refactor
 
