--- a/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
+++ b/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
@@ -20,6 +20,10 @@ extra-source-files:
   test/testdata/**/*.project
 
 library
+  if impl(ghc >= 9.3)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:  Ide.Plugin.ModuleName
   hs-source-dirs:   src
   build-depends:
@@ -37,6 +41,10 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.3)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
