--- a/plugins/hls-pragmas-plugin/hls-pragmas-plugin.cabal
+++ b/plugins/hls-pragmas-plugin/hls-pragmas-plugin.cabal
@@ -18,6 +18,10 @@ extra-source-files:
   test/testdata/*.yaml
 
 library
+  if impl(ghc >= 9.3)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:  Ide.Plugin.Pragmas
   hs-source-dirs:   src
   build-depends:
@@ -37,6 +41,10 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.3)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
