--- a/plugins/hls-selection-range-plugin/hls-selection-range-plugin.cabal
+++ b/plugins/hls-selection-range-plugin/hls-selection-range-plugin.cabal
@@ -23,6 +23,7 @@ extra-source-files:
 library
   exposed-modules:
     Ide.Plugin.SelectionRange
+    Ide.Plugin.SelectionRange.CodeRange
   other-modules:
     Ide.Plugin.SelectionRange.ASTPreProcess
   ghc-options: -Wall
@@ -40,6 +41,8 @@ library
     , text
     , extra
     , semigroupoids
+    , hashable
+    , deepseq
 
 test-suite tests
   type:             exitcode-stdio-1.0
@@ -53,6 +56,7 @@ test-suite tests
     , filepath
     , hls-selection-range-plugin
     , hls-test-utils             ^>=1.2 || ^>=1.3
+    , ghcide                     ^>=1.6 || ^>=1.7
     , lsp
     , lsp-test
     , text
