refine selection range

--- a/plugins/hls-selection-range-plugin/hls-selection-range-plugin.cabal
+++ b/plugins/hls-selection-range-plugin/hls-selection-range-plugin.cabal
@@ -43,6 +43,8 @@ library
     , semigroupoids
     , hashable
     , deepseq
+    , vector
+    , lens
 
 test-suite tests
   type:             exitcode-stdio-1.0
