--- a/.github/workflows/hackage.yml
+++ b/.github/workflows/hackage.yml
@@ -36,7 +36,7 @@ jobs:
                   "hls-refine-imports-plugin", "hls-rename-plugin", "hls-retrie-plugin",
                   "hls-splice-plugin", "hls-tactics-plugin",
                   "hls-call-hierarchy-plugin", "hls-alternate-number-format-plugin",
-                  "hls-qualify-imported-names-plugin", "hls-selection-range-plugin",
+                  "hls-qualify-imported-names-plugin", "hls-code-range-plugin",
                   "haskell-language-server"]
         ghc: [ "9.0.2"
              , "8.10.7"
