--- a/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
+++ b/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
@@ -51,6 +51,9 @@ test-suite tests
   default-language: Haskell2010
   hs-source-dirs:   test
   main-is:          Main.hs
+  other-modules:
+    Ide.Plugin.CodeRangeTest
+    Ide.Plugin.CodeRange.RulesTest
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   build-depends:
     , base
@@ -64,3 +67,4 @@ test-suite tests
     , text
     , bytestring
     , lens
+    , tasty-hunit
