hls-graph: add lower bound for async
`Control.Concurrent.Async` is not available before `async-2.0`

--- a/hls-graph/hls-graph.cabal
+++ b/hls-graph/hls-graph.cabal
@@ -61,7 +61,7 @@ library
   hs-source-dirs:     src
   build-depends:
     , aeson
-    , async
+    , async >= 2.0
     , base >=4.12 && <5
     , bytestring
     , containers
