Add 'isolateTests' cabal flag to make plugin install cabal-fmt
For CI, we want to run the tests with a specific cabal-fmt version,
installed automatically by cabal.
However, locally, we might want to test with a locally installed
cabal-fmt version.
This flag allows developers to either let cabal install the
build-tool-depends or install a fitting version locally.

--- a/plugins/hls-cabal-fmt-plugin/hls-cabal-fmt-plugin.cabal
+++ b/plugins/hls-cabal-fmt-plugin/hls-cabal-fmt-plugin.cabal
@@ -14,6 +14,12 @@ category:           Development
 build-type:         Simple
 extra-source-files: LICENSE
 
+flag isolateTests
+  description: Should tests search for 'cabal-fmt' on the $PATH or shall we install it via build-tool-depends?
+  -- By default, search on the PATH
+  default:     False
+  manual:      True
+
 common warnings
   ghc-options: -Wall
 
@@ -44,8 +50,10 @@ test-suite tests
   ghc-options:        -threaded -rtsopts -with-rtsopts=-N
   build-depends:
     , base
+    , directory
     , filepath
     , hls-cabal-fmt-plugin
     , hls-test-utils        ^>=1.4
 
-  build-tool-depends: cabal-fmt:cabal-fmt ^>=0.1.6
+  if flag(isolateTests)
+    build-tool-depends: cabal-fmt:cabal-fmt ^>=0.1.6
