hls-fourmolu-plugin: add lower bound for process-extras
There is no `System.Process.Run` before `process-extras-0.7.1`

--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -36,7 +36,7 @@ library
     , hls-plugin-api  ^>=1.4
     , lens
     , lsp
-    , process-extras
+    , process-extras  >= 0.7.1
     , text
 
   default-language: Haskell2010
