hls-eval-plugin: add lower bound for parser-combinators
`manyTill_` was introduced only in `parser-combinators-1.2`

--- a/plugins/hls-eval-plugin/hls-eval-plugin.cabal
+++ b/plugins/hls-eval-plugin/hls-eval-plugin.cabal
@@ -75,7 +75,7 @@ library
     , lsp-types
     , megaparsec            >=9.0
     , mtl
-    , parser-combinators
+    , parser-combinators    >=1.2
     , pretty-simple
     , QuickCheck
     , safe-exceptions
