haskell-language-server: add lower bound for githash
The type of `tGitInfoCwdTry` has been different before `githash-0.1.6.1`.

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -72,7 +72,7 @@ library
     , data-default
     , ghc
     , ghcide                ^>=1.7
-    , githash
+    , githash               >=0.1.6.1
     , lsp
     , hie-bios
     , hiedb
