--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -63,6 +63,12 @@ flag ignore-plugins-ghc-bounds
   default:     False
   manual:      True
 
+
+flag cabal
+  description: Enable cabal plugin
+  default:     True
+  manual:      True
+
 flag class
   description: Enable class plugin
   default:     True
@@ -215,6 +221,11 @@ common cabalfmt
     build-depends: hls-cabal-fmt-plugin ^>= 0.1.0.0
     cpp-options: -Dhls_cabalfmt
 
+common cabal
+  if flag(cabal)
+    build-depends: hls-cabal-plugin ^>= 0.1
+    cpp-options: -Dhls_cabal
+
 common class
   if flag(class)
     build-depends: hls-class-plugin ^>= 1.1
@@ -358,6 +369,7 @@ library
                   , warnings
                   , pedantic
                   -- plugins
+                  , cabal
                   , callHierarchy
                   , cabalfmt
                   , changeTypeSignature
