--- a/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
+++ b/plugins/hls-cabal-plugin/hls-cabal-plugin.cabal
@@ -13,6 +13,8 @@ maintainer:         fendor@posteo.de
 category:           Development
 extra-source-files:
   CHANGELOG.md
+  test/testdata/invalid.cabal
+  test/testdata/licenseCodeAction.cabal
   test/testdata/simple.cabal
 
 common warnings
@@ -27,27 +29,21 @@ library
     Ide.Plugin.Cabal.Parse
 
   build-depends:
-    , aeson
-    , base                  >=4.12 && <5
+    , base                  >=4.12     && <5
     , bytestring
-    , Cabal
-    , czipwith
+    , Cabal                 ^>=3.2 || ^>=3.4 || ^>=3.6
     , deepseq
     , directory
-    , extra
-    , filepath
-    , ghc-exactprint
-    , ghcide          >=1.6  && <1.9
+    , extra                 >=1.7.4
+    , ghcide                ^>= 1.8
     , hashable
-    , hls-plugin-api  >=1.5  && <1.6
-    , lens
-    , lsp
-    , lsp-types
-    , regex-tdfa
+    , hls-plugin-api        ^>=1.5
+    , lsp                   ^>=1.6.0.0
+    , lsp-types             ^>=1.6.0.0
+    , regex-tdfa            ^>=1.3.1
     , stm
     , text
-    , transformers
-    , unordered-containers
+    , unordered-containers  >=0.2.10.0
 
   hs-source-dirs:   src
   default-language: Haskell2010
@@ -61,11 +57,10 @@ test-suite tests
   build-depends:
     , base
     , filepath
+    , ghcide
     , hls-cabal-plugin
     , hls-test-utils    ^>=1.4
     , lens
-    , lsp
-    , ghcide
     , lsp-types
     , tasty-hunit
     , text
