--- a/cabal.project
+++ b/cabal.project
@@ -62,6 +62,12 @@ source-repository-package
   tag: 7a0af7a8fd38045fd15fb13445bdcc7085325460
   -- https://github.com/tibbe/ekg-json/pull/12
 
+-- TODO: remove me when the fix is merged upstream
+source-repository-package
+  type: git
+  location: https://github.com/kokobd/ghc-check.git
+  tag: 3522cc27cb4582bea1656581cc863d80de770dce
+
 allow-newer:
   -- ghc-9.2
   ----------
