gitpod store ghcide and hie-bios cache
These cache directories are small, but not preserving them requires
HLS to compile all modules in local project on workspace restarts.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,6 +10,8 @@ tasks:
         $HOME/.local
         $HOME/.cabal
         $HOME/.stack
+        $HOME/.cache/ghcide
+        $HOME/.cache/hie-bios
         /nix
       )
       for DIR in "${CACHE_DIRS[@]}"; do
