--- a/stack-lts16.yaml
+++ b/stack-lts16.yaml
@@ -92,6 +92,7 @@ extra-deps:
   - primitive-extras-0.10.1
   - primitive-unlifted-0.1.3.1
   - githash-0.1.6.2
+  - stan-0.0.1.0
 
 configure-options:
   ghcide:
