handle trailing comma in import list properly (#3035)
* handle trailing comma in import list properly

* no longer backup .ghcup in gitpod

* fix for ghc < 9

* fix it without using CPP

* explain gitpod change

* read trailing comma before adding one

* refine imports

* refine gitpod

* gitpod store ghcide and hie-bios cache

These cache directories are small, but not preserving them requires
HLS to compile all modules in local project on workspace restarts.

* fix code styling

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,7 +10,8 @@ tasks:
         $HOME/.local
         $HOME/.cabal
         $HOME/.stack
-        $HOME/.ghcup
+        $HOME/.cache/ghcide
+        $HOME/.cache/hie-bios
         /nix
       )
       for DIR in "${CACHE_DIRS[@]}"; do
@@ -41,9 +42,7 @@ tasks:
         echo '}' >> .vscode/settings.json
       fi
 
-      pushd docs
-        pip install -r requirements.txt
-      popd
+      pip install -r docs/requirements.txt
     init: |
       cabal update
       cabal configure --enable-executable-dynamic
