--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -15,6 +15,7 @@ jobs:
       with:
         ghc: "9.2.3"
         os: ${{ runner.os }}
+        shorten-hls: false
 
     - name: "Install stylish-haskell"
       run: |
