hls-explicit-fixity-plugin (#2941)
* init hls-explicit-fixity-plugin

* Update dependencies

* Refactor: Prevent block on startup

* Run pre-commit

* Compatibility: Add emptyMessages

* Remove unused ModIface

* Comment why to make this plugin a lower priority

* Provide hover content while testing fail

* Avoid lambda

* 4 space indent

* Pass Text instead of Name

Co-authored-by: Pepe Iborra <pepeiborra@gmail.com>

--- a/stack.yaml
+++ b/stack.yaml
@@ -31,6 +31,7 @@ packages:
 - ./plugins/hls-code-range-plugin
 - ./plugins/hls-change-type-signature-plugin
 - ./plugins/hls-gadt-plugin
+- ./plugins/hls-explicit-fixity-plugin
 
 extra-deps:
 - floskell-0.10.6@sha256:e77d194189e8540abe2ace2c7cb8efafc747ca35881a2fefcbd2d40a1292e036,3819
