--- a/cabal.project
+++ b/cabal.project
@@ -30,6 +30,7 @@ packages:
          ./plugins/hls-change-type-signature-plugin
          ./plugins/hls-stan-plugin
          ./plugins/hls-gadt-plugin
+         ./plugins/hls-explicit-fixity-plugin
 
 -- Standard location for temporary packages needed for particular environments
 -- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
