--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -196,6 +196,11 @@ flag gadt
   default:     True
   manual:      True
 
+flag explicitFixity
+  description: Enable explicitFixity plugin
+  default:     True
+  manual:      True
+
 -- formatters
 
 flag floskell
@@ -329,6 +334,11 @@ common gadt
     build-depends: hls-gadt-plugin ^>= 1.0
     cpp-options: -Dhls_gadt
 
+common explicitFixity
+  if flag(explicitFixity)
+    build-depends: hls-explicit-fixity-plugin ^>= 1.0
+    cpp-options: -DexplicitFixity
+
 -- formatters
 
 common floskell
@@ -382,6 +392,7 @@ executable haskell-language-server
                     , qualifyImportedNames
                     , codeRange
                     , gadt
+                    , explicitFixity
                     , floskell
                     , fourmolu
                     , ormolu
