--- a/stack-lts19.yaml
+++ b/stack-lts19.yaml
@@ -31,6 +31,7 @@ packages:
   - ./plugins/hls-code-range-plugin
   - ./plugins/hls-change-type-signature-plugin
   - ./plugins/hls-gadt-plugin
+  - ./plugins/hls-explicit-fixity-plugin
 
 ghc-options:
   "$everything": -haddock
